fix: fixed width search input, fixed visibility menu-button

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@ body {
   margin: auto;
 }
 
+img {
+  max-width: 100%;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -374,6 +378,10 @@ template {
   padding-bottom: 40px;
 }
 
+.navbar-top__menu-button {
+  display: none;
+}
+
 .navbar__search {
   margin-right: auto;
   margin-left: 108px;
@@ -474,9 +482,12 @@ template {
   }
 }
 
-@media screen and (max-width: 992px) {
+@media (max-width: 992px) {
   .container {
     max-width: 700px;
+  }
+  .logo {
+    width: 132px;
   }
   .navbar-top {
     margin-top: 30px;
@@ -484,7 +495,6 @@ template {
   }
   .navbar__search {
     margin-left: auto;
-    max-width: 340px;
   }
   .navbar-menu {
     padding-top: 22px;
@@ -494,11 +504,49 @@ template {
     font-size: 12px;
     line-height: 15px;
   }
+  .search__link {
+    width: 340px;
+  }
 }
 
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
   .container max-width 576px {
     width: 92%;
+  }
+  .navbar__search, .navbar-menu, .navbar__user {
+    display: none;
+  }
+  .menu-button {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 16px;
+    height: 11px;
+    padding: 0;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    border: none;
+    background-color: #fff;
+    cursor: pointer;
+  }
+  .menu-button__line {
+    width: 16px;
+    height: 1px;
+    background-color: #333;
+  }
+}
+
+@media (max-width: 579px) {
+  .logo {
+    width: 99px;
   }
 }
 /*# sourceMappingURL=style.css.map */
