--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,26 +1,53 @@
 @media (max-width: 1200px)
   .container
     max-width: 960px
-@media screen and ( max-width: 992px )
+@media (max-width: 992px)
   .container
     max-width: 700px
+  .logo
+    width: 132px  
   .navbar
     &-top
       margin-top: 30px
       margin-bottom: 30px
     &__search
       margin-left: auto
-      max-width: 340px
     &-menu
       padding-top: 22px
       padding-bottom: 22px
       &__link
         font-size: 12px
-        line-height: 15px  
-@media screen and ( max-width: 768px  )
+        line-height: 15px 
+  .search
+    &__link
+      width: 340px
+
+@media (max-width: 768px)
   .container
     max-width 576px
       width: 92%
-          
+  .navbar
+    &__search, &-menu, &__user
+      display: none
+  .menu
+    &-button  
+      display: flex
+      width: 16px
+      height: 11px
+      padding: 0
+      align-items: center
+      justify-content: space-between
+      flex-direction: column
+      border: none
+      background-color: #fff
+      cursor: pointer
+      &__line 
+        width: 16px
+        height: 1px
+        background-color: $text-color  
+@media (max-width: 579px)
+  .logo
+    width: 99px
+                
       
   
