--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -7,3 +7,6 @@ body
 .container
   max-width: 1110px
   margin: auto
+img
+  max-width: 100%
+    
